crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_no_eslint_config_packagejson.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `package.json`

```json
{
        "name": "foo",
        "version": "0.0.0"
    }
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: The default ESLint configuration file `.eslintrc[.*]` was not found in the working directory.
  


```
