crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_no_restricted_properties_with_options.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint --include-inspired --include-nursery --write
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "none",
      "nursery": {
        "noJsRestrictedProperties": {
          "level": "error",
          "options": {
            "entries": [
              {
                "object": "require",
                "property": "ensure",
                "message": "Use dynamic import() instead."
              },
              { "object": "arguments", "allowProperties": ["length"] },
              { "property": "__defineGetter__", "allowObjects": ["Object"] }
            ]
          }
        }
      }
    }
  }
}
```

## `.eslintrc.json`

```json
{
        "rules": {
            "no-restricted-properties": ["error",
                {
                    "object": "require",
                    "property": "ensure",
                    "message": "Use dynamic import() instead."
                },
                {
                    "object": "arguments",
                    "allowProperties": ["length"]
                },
                {
                    "property": "__defineGetter__",
                    "allowObjects": ["Object"]
                }
            ]
        }
    }
```

# Emitted Messages

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 ESLint rules found
    - 1 have been migrated to Biome's rules
    - 100% (1) of your ESLint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
