crates/biome_cli/tests/snapshots/main_commands_migrate_eslint/migrate_vitest_consistent_test_it_with_options.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate eslint --include-inspired --include-nursery --write
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "preset": "none",
      "style": {
        "useConsistentTestIt": {
          "level": "error",
          "options": { "function": "it", "withinDescribe": "test" }
        }
      }
    }
  }
}
```

## `.eslintrc.json`

```json
{
        "rules": {
            "vitest/consistent-test-it": ["error", {
                "fn": "it",
                "withinDescribe": "test"
            }]
        }
    }
```

# Emitted Messages

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 ESLint rules found
    - 1 have been migrated to Biome's rules
    - 100% (1) of your ESLint rules are fully covered by Biome
      - 100% (1) via direct migration to Biome rules
  
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
